--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,57 @@
 */*/.gitmodules
 */*/.gitattributes
 
+# Python-related ignores
+**/__pycache__/
+**/*.py[cod]
+**/*$py.class
+**/*.so
+**/.Python
+**/env/
+**/build/
+**/develop-eggs/
+**/dist/
+**/downloads/
+**/eggs/
+**/.eggs/
+**/lib64/
+**/parts/
+**/sdist/
+**/var/
+**/wheels/
+**/*.egg-info/
+**/.installed.cfg
+**/*.egg
+**/.env
+**/.venv
+**/venv/
+**/ENV/
+**/.ipynb_checkpoints/
+
+# Next.js specific
+**/.next/
+**/out/
+**/.vercel
+**/.turbo
+
+# AWS credentials and config
+**/.aws/
+**/aws.json
+**/.aws-credentials
+
+# Docker related
+**/docker-compose.override.yml
+
+
+# Model files and large data (adjust as needed)
+**/*.pth
+**/*.pt
+**/*.pkl
+**/*.h5
+**/*.onnx
+**/*.safetensors
+**/*.bin
+**/*.wav
+**/*.mp3
+**/*.mp4
+**/*.webm
