--- a/tonex-labs-frontend/package.json
+++ b/tonex-labs-frontend/package.json
@@ -26,15 +26,16 @@
     "@aws-sdk/client-s3": "^3.888.0",
     "@aws-sdk/s3-request-presigner": "^3.888.0",
     "@hookform/resolvers": "^5.2.1",
+    "@next/bundle-analyzer": "^15.5.5",
     "@prisma/client": "^6.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "bcryptjs": "^3.0.2",
     "inngest": "^3.42.0",
     "lucide-react": "^0.544.0",
-    "next": "^15.2.3",
+    "next": "^15.5.5",
     "next-auth": "5.0.0-beta.25",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
